tests/dataset/tpc-ds/compiler/kotlin/q41.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q41.kt:40:17: error: unresolved reference: product_name
}.sortedBy { it.product_name as Comparable<Any> }
                ^
